--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+    <!-- Ustawienie kodowania na UTF-8 -->
     <meta charset="UTF-8">
+    <!-- Responsywność -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XXXX</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Finance Brothers</title>
+    <!-- Zewnętrzne zależności Bootstrap i Google Fonts -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Lokalny plik CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Kontener na logo i przyciski zoomu -->
     <div class="logo-container">
         <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         <div class="zoom-controls">
@@ -17,14 +22,16 @@
             <button id="toggleDarkModeBtn" class="btn btn-sm" aria-label="Przełącz tryb ciemny">🌙</button>
         </div>
     </div>
+    <!-- Główny kontener formularza -->
     <div class="container">
         <div class="form-section" id="formSection">
             <div class="header-row">
-                <h4>XXXX</h4>
+                <h4>Finance Brothers</h4>
             </div>
             <div class="form-container">
                 <div class="form-wrapper">
                     <form id="obligacjeForm">
+                        <!-- Pierwszy wiersz: Kwota, Okres, Inflacja -->
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota inwestycji</label>
@@ -52,6 +59,7 @@
                                 <input type="range" class="form-range" id="inflacjaRange" min="0.1" max="50" step="0.1" value="4.90">
                             </div>
                         </div>
+                        <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
                         <div class="form-row">
                             <div class="form-group" id="rodzajRat">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
@@ -73,6 +81,7 @@
                                 <div class="sub-info" id="prowizjaInfo">Wartość: 1000 zł</div>
                             </div>
                         </div>
+                        <!-- Zmienne oprocentowanie -->
                         <div class="variable-rate-container" id="variableOprocentowanieContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="zmienneOprocentowanieLabel">
@@ -86,6 +95,7 @@
                                 <button type="button" class="btn btn-secondary btn-sm" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
+                        <!-- Nadpłata kredytu -->
                         <div class="variable-rate-container" id="nadplataKredytuContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="nadplataKredytuLabel">
@@ -99,6 +109,7 @@
                                 <button type="button" class="btn btn-secondary btn-sm" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
+                        <!-- Przycisk oblicz -->
                         <div class="form-row">
                             <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki inwestycji">Oblicz</button>
                         </div>
@@ -107,7 +118,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
