--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         </div>
                         <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
                         <div class="form-row">
+                            <!-- Rodzaj rat -->
                             <div class="form-group" id="rodzajRat">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
                                 <select class="form-select" id="rodzajRat">
@@ -68,6 +69,7 @@
                                     <option value="malejace">Raty malejące</option>
                                 </select>
                             </div>
+                            <!-- Prowizja -->
                             <div class="form-group" id="prowizja">
                                 <label for="prowizja" class="form-label">Prowizja</label>
                                 <div class="input-group">
