--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Lokalny plik CSS -->
-    <link rel="stylesheet" href="styles.css?v=13">
+    <link rel="stylesheet" href="styles.css?v=16">
 </head>
 <body>
     <!-- Kontener na logo i przyciski zoomu -->
@@ -89,7 +89,7 @@
                                 <label class="checkbox-label" id="zmienneOprocentowanieLabel">
                                     <input type="checkbox" id="zmienneOprocentowanieBtn">
                                     <span class="checkbox-custom"></span>
-                                    <b>Zmienne Oprocentowanie</b>
+                                    Zmienne Oprocentowanie
                                 </label>
                             </div>
                             <div class="variable-inputs" id="variableOprocentowanieInputs">
@@ -103,7 +103,7 @@
                                 <label class="checkbox-label" id="nadplataKredytuLabel">
                                     <input type="checkbox" id="nadplataKredytuBtn">
                                     <span class="checkbox-custom"></span>
-                                    <b>Nadpłata Kredytu</b>
+                                    Nadpłata Kredytu
                                 </label>
                             </div>
                             <div class="variable-inputs" id="nadplataKredytuInputs">
